mdapi/Custom/objects/Wire_Request__c.object
<CustomObject>
    <description>This object is the related list on EM/COE Tracker that shows wire request details.  This object also has an Approval Process.</description>
    <fields>
        <fullName>Amount_Funded__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beneficiary_ABA__c</fullName>
        <formula>Title_Company__r.Beneficiary_ABA__c</formula>
        <label>Beneficiary ABA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_Name__c</fullName>
        <formula>Title_Company__r.Beneficiary_Account_Name__c</formula>
        <label>Beneficiary Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_No__c</fullName>
        <formula>Title_Company__r.Beneficiary_Account_No__c</formula>
        <label>Beneficiary Account No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Bank__c</fullName>
        <formula>Title_Company__r.Beneficiary_Bank__c</formula>
        <label>Beneficiary Bank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <formula>EM_COE_Tracker__r.Bid_Type__c</formula>
        <label>Bid Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Approved__c</fullName>
        <label>Bookkeeper Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COE_File_No__c</fullName>
        <inlineHelpText>This field was formerly on Pipeline and is used in the Wire Reference No. formula field.</inlineHelpText>
        <label>COE File No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Acquisition_Date__c</fullName>
        <formula>EM_COE_Tracker__r.Pipeline__r.Acquisition_Date__c</formula>
        <label>Closing/Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <label>Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested_to_Fund__c</fullName>
        <inlineHelpText>This date is put in at the time of the Wire Request.  This is the date we are requesting funds to be submitted for wiring.</inlineHelpText>
        <label>Date Funds Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_O_S_Since_Fund_Date__c</fullName>
        <formula>IF( AND(  EM_COE_Tracker__r.Refund_Due_Old__c   &gt; 0, NOT( ISBLANK(  EM_COE_Tracker__r.Refund_Due_Old__c  ) ) ) ,  TODAY()  -     Fund_Date__c   , null)</formula>
        <inlineHelpText>This field populates only if (1) there is an amount greater than $0 in Refund Due on the related Escrow Tracker record, and (2) the Actual Funded Date field has a date.</inlineHelpText>
        <label>Days O/S Since Fund Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Director_Approved__c</fullName>
        <label>Director Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_COE_Tracker__c</fullName>
        <label>EM/COE Tracker</label>
        <referenceTo>EMD_COE_Request__c</referenceTo>
        <relationshipLabel>Wire Requests</relationshipLabel>
        <relationshipName>Wire_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Escrow_Cancelled_Date__c</fullName>
        <formula>EM_COE_Tracker__r.Escrow_Cancelled_Date__c</formula>
        <label>Escrow Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Date__c</fullName>
        <inlineHelpText>This is the date of actual funding, which may not be the same as &quot;Date Funds Requested&quot; for a variety of reasons.  This date will tie to the banking transaction.</inlineHelpText>
        <label>Actual Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Text__c</fullName>
        <inlineHelpText>This field is to be used only when an EM/COE Tracker record has been created for a Prospect that has not yet been converted to Pipeline.  Upon conversion, the &quot;Fund&quot; field will auto-populate with the value in the &quot;Fund&quot; field on the Pipeline record.</inlineHelpText>
        <label>Fund Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <formula>EM_COE_Tracker__r.Fund__c</formula>
        <inlineHelpText>This field auto-populates with the value in the &quot;Fund&quot; field on Pipeline records.</inlineHelpText>
        <label>Fund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Comments__c</fullName>
        <label>Funding Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <inlineHelpText>This field was used by the Salesforce Team to document an association to a Portfolio record that did not have an affiliated Pipeline record.  This field can also be used to document any other general notes.</inlineHelpText>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>EM_COE_Tracker__r.Market__c</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Request_ID__c</fullName>
        <label>Original Request ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Status__c</fullName>
        <formula>EM_COE_Tracker__r.Pipeline_Status__c</formula>
        <inlineHelpText>If Pipeline Status is populated and contains the word &quot;Dead&quot;, the Wire Request cannot be submitted for approval.</inlineHelpText>
        <label>Pipeline Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline__c</fullName>
        <formula>EM_COE_Tracker__r.Pipeline__r.Name</formula>
        <label>Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>EM_COE_Tracker__r.Property_City__c</formula>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>EM_COE_Tracker__r.Property_State__c</formula>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street__c</fullName>
        <formula>EM_COE_Tracker__r.Property_Street__c</formula>
        <label>Property Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <formula>EM_COE_Tracker__r.Prospect_Status__c</formula>
        <inlineHelpText>If Prospect Status is populated and contains the word &quot;Dead&quot;, the Wire Request cannot be submitted for approval.</inlineHelpText>
        <label>Prospect Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <formula>EM_COE_Tracker__r.Prospect__r.Name</formula>
        <label>Prospect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Sharing__c</fullName>
        <inlineHelpText>This field is used specifically for sharing/approval process purposes.</inlineHelpText>
        <label>Region Sharing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Text__c</fullName>
        <inlineHelpText>This field was used by the Salesforce Team to populate Region for Wire Requests that were not affiliated with a Prospect or Pipeline record (via the parent Tracker record).</inlineHelpText>
        <label>Region Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>EM_COE_Tracker__r.Region__c</formula>
        <label>Market2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Address_Text__c</fullName>
        <label>Search Address Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company_City__c</fullName>
        <formula>Title_Company__r.BillingCity</formula>
        <label>Title Company City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company_State__c</fullName>
        <formula>Title_Company__r.BillingState</formula>
        <label>Title Company State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company_Text__c</fullName>
        <inlineHelpText>This field is for loading Title Companies that are not in Salesforce as Company records.  The values in this field came from the regions&apos; Escrow Tracker spreadsheets.</inlineHelpText>
        <label>Title Company / Brokerage Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Title Company / Brokerage</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wire Requests</relationshipLabel>
        <relationshipName>Wire_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracker_Entity__c</fullName>
        <formula>TEXT(EM_COE_Tracker__r.Tracker_Entity__c)</formula>
        <inlineHelpText>This value auto-populates with the value in the Tracker Entity field on the EM/COE Tracker record.  This field can help determine whether or not there is a match between the Entity on the Tracker and the Entity on the Wire.</inlineHelpText>
        <label>Tracker Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EM</fullName>
                </value>
                <value>
                    <fullName>EM - Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>COE</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wire_Entity__c</fullName>
        <inlineHelpText>This value may or may not tie to the Fund value that auto-populates from the Pipeline record.</inlineHelpText>
        <label>Wire Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IH1</fullName>
                </value>
                <value>
                    <fullName>IH2</fullName>
                </value>
                <value>
                    <fullName>IH3</fullName>
                </value>
                <value>
                    <fullName>IH4</fullName>
                </value>
                <value>
                    <fullName>IH5</fullName>
                </value>
                <value>
                    <fullName>IH6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wire_Reference_No__c</fullName>
        <formula>IF( ISPICKVAL( Type__c , &apos;COE&apos;) ,   EM_COE_Tracker__r.Pipeline__r.COE_File_No__c   &amp; &apos;-&apos; &amp;  EM_COE_Tracker__r.Property_Street__c ,  EM_COE_Tracker__r.Property_Street__c )</formula>
        <inlineHelpText>If Type is COE, this value is the COE File No. from the associated Pipeline record and the Street Address.  If Type is EM, this value is just the Street Address.</inlineHelpText>
        <label>Wire Reference No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wire_Transfer_Reference__c</fullName>
        <label>Fed Ref ID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <label>Wire Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approvals_Complete</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Type__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bookkeeper_Approved__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Director_Approved__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Approvals Complete</label>
    </listViews>
    <listViews>
        <fullName>Atlanta</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Atlanta</value>
        </filters>
        <label>Atlanta</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Atlanta</role>
            <role>Team_Member_Atlanta</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bookkeeper_Approval_Pending</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Type__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Date_Requested_to_Fund__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bookkeeper_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bookkeeper Approval Pending</label>
    </listViews>
    <listViews>
        <fullName>COE</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>COE_File_No__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Type__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>COE</value>
        </filters>
        <label>COE</label>
    </listViews>
    <listViews>
        <fullName>Charlotte</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Search_Address_Text__c</columns>
        <columns>Property_City__c</columns>
        <columns>Fund__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Charlotte</value>
        </filters>
        <label>Charlotte</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Charlotte</role>
            <role>Team_Member_Charlotte</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Charlotte_Approvals_Pending</fullName>
        <booleanFilter>(1 or 2) and 3 and 4</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Search_Address_Text__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Charlotte</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Charlotte</value>
        </filters>
        <filters>
            <field>Bookkeeper_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Director_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <label>Charlotte Approvals Pending</label>
        <sharedTo>
            <group>Region_Controller_Bookkeepers_Charlotte</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Controller_Approval_Pending</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Type__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bookkeeper_Approved__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Director_Approved__c</field>
            <operation>equals</operation>
        </filters>
        <label>Controller Approval Pending</label>
    </listViews>
    <listViews>
        <fullName>EM</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>EM</value>
        </filters>
        <label>EM</label>
    </listViews>
    <listViews>
        <fullName>Escrow_is_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escrow_Cancelled_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Escrow is Cancelled</label>
    </listViews>
    <listViews>
        <fullName>Funding_Tomorrow</fullName>
        <columns>NAME</columns>
        <columns>Region_Sharing__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Requested_to_Fund__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Wire_Transfer_Reference__c</columns>
        <columns>Wire_Reference_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_Requested_to_Fund__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Funding Tomorrow</label>
    </listViews>
    <listViews>
        <fullName>Inland_Empire</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Inland Empire</value>
        </filters>
        <label>Inland Empire</label>
        <sharedTo>
            <role>Executive_Inland_Empire</role>
            <role>Team_Member_Inland_Empire</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jacksonville</fullName>
        <columns>NAME</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Property_Street__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Jacksonville</value>
        </filters>
        <label>Jacksonville</label>
        <sharedTo>
            <role>Executive_Jacksonville</role>
            <role>Team_Member_Jacksonville</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Las_Vegas</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Search_Address_Text__c</columns>
        <columns>Property_City__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Las Vegas</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Las Vegas</value>
        </filters>
        <label>Las Vegas</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_Las_Vegas</role>
            <role>Team_Member_Las_Vegas</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Los_Angeles</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>EM_COE_Tracker__c</columns>
        <columns>Pipeline__c</columns>
        <columns>Search_Address_Text__c</columns>
        <columns>Tracker_Entity__c</columns>
        <columns>Wire_Entity__c</columns>
        <columns>Type__c</columns>
        <columns>Amount_Funded__c</columns>
        <columns>Fund_Date__c</columns>
        <columns>Escrow_Cancelled_Date__c</columns>
        <columns>Bookkeeper_Approved__c</columns>
        <columns>Director_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region_Sharing__c</field>
            <operation>equals</operation>
            <value>Los Angeles</value>
        </filters>
        <label>Los Angeles</label>
        <sharedTo>
            <role>Executive</role>
            <role>Executive_LA_County</role>
            <role>Team_Member_LA_County</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>WIREREQ-{000000}</displayFormat>
        <label>Wire Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wire Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>